--- a/assets/style.css
+++ b/assets/style.css
@@ -1,3 +1,8 @@
-.form-control {
-    width: 50%;
+.card-text {
+    font-size: 11px;
+}
+
+#display-forecast {
+    justify-content: space-evenly;
+    /*padding: 10px;*/
 }
